--- a/src/app/currency-details/historical-data/historical-data.component.html
+++ b/src/app/currency-details/historical-data/historical-data.component.html
@@ -1,1 +1,4 @@
-<p>historical-data works!</p>
+<div class="chart-container">
+    <canvas  id="MyChart" class="currency-chart">{{ chart }}</canvas>
+  </div>
+  
