--- a/src/app/currency-details/currency-details.component.html
+++ b/src/app/currency-details/currency-details.component.html
@@ -1,15 +1,20 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
-            <h4>Currency Exchange</h4>
+    <div class="row padding-top">
+        <div class="col-sm-10">
+            <h4>{{fromCurrencyHeader}}</h4>
         </div>
+        <div class="col-sm-2">
+            <button type="submit" class="btn btn-primary float-right" (click)="navigateToCurrencyDetails()">Back To Home</button>
+        </div>
+        
     </div>
-    <div class="row">
-        <div class="col-sm-12">
+    <div class="row converter-container">
+        <div class="col-sm-12 convertor-form">
             <app-currency-converter-form></app-currency-converter-form>
         </div>
         <div class="col-sm-12">
-            <app-historical-data></app-historical-data>
+            <app-historical-data [toCurrencyHeader]="toCurrencyHeader"
+            [fromCurrencyHeader]="fromCurrencyHeader"></app-historical-data>
         </div>
     </div>
 </div>
