--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,10 +6,10 @@
     <!-- Links -->
     <ul class="navbar-nav">
     <li class="nav-item margin-right">
-        <button type="button" class="btn btn-outline-primary" (click)="navigateToCurrencyDetails()">EUR-USD Details</button>
+        <button type="button" class="btn btn-outline-primary" (click)="navigateToCurrencyDetails('EUR', 'USD')">EUR-USD Details</button>
     </li>
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-primary">EUR-GBP Details</button>
+        <button type="button" class="btn btn-outline-primary" (click)="navigateToCurrencyDetails('EUR', 'INR')">EUR-INR Details</button>
     </li>
     </ul>
 </nav>
