--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    border: 1px solid #FFFFFF;
     height: 100%;
 }
 
 * {
     background-color: black;
     color: white;
+}
+.converter-container{
+    padding: 10px;
+}
+.convertor-form {
+    padding-top: 5px;
+    padding-bottom: 10px;
+    border: 1px solid #ffff;
+}
+
+.padding-top{
+    padding-top: 5px;
 }
