auth interceptor and graph code

--- a/src/app/currency-details/currency-details.component.html
+++ b/src/app/currency-details/currency-details.component.html
@@ -13,8 +13,8 @@
             <app-currency-converter-form></app-currency-converter-form>
         </div>
         <div class="col-sm-12">
-            <app-historical-data [toCurrencyHeader]="toCurrencyHeader"
-            [fromCurrencyHeader]="fromCurrencyHeader"></app-historical-data>
+            <app-historical-data [toCurrencyHeader]="toCurrencyHeader" [historicalData]="historicalData"
+            [fromCurrencyHeader]="fromCurrency"></app-historical-data>
         </div>
     </div>
 </div>
