--- a/src/app/currency-details/historical-data/historical-data.component.html
+++ b/src/app/currency-details/historical-data/historical-data.component.html
@@ -1,4 +1,4 @@
 <div class="chart-container">
-    <canvas  id="MyChart" class="currency-chart">{{ chart }}</canvas>
+    <canvas  id="MyChart" class="currency-chart" height="10%">{{ chart }}</canvas>
   </div>
   
