--- a/src/app/shared/components/currency-converter-form/currency-converter-form.component.html
+++ b/src/app/shared/components/currency-converter-form/currency-converter-form.component.html
@@ -1,69 +1,72 @@
-<form [formGroup]="currencyConverterForm" (ngSubmit)="convertCurrency()" novalidate 
-*ngIf="conversions && conversions.length">
-    <div class="row flex-display">
-        <div class="col-sm-4 margin-top">
-            <label>
-                Amount
-            </label>
-            <div>
-                <input class="amount-input" placeholder="Amount" id="amount"
-                [formControlName]="formNames.Amount" type="number">
+<div >
+    <div class="loader" *ngIf="showLoader"></div>
+    <form [formGroup]="currencyConverterForm" (ngSubmit)="convertCurrency()" novalidate 
+    *ngIf="conversions && conversions.length">
+        <div class="row flex-display">
+            <div class="col-sm-4 margin-top">
+                <label>
+                    Amount
+                </label>
+                <div>
+                    <input class="amount-input" placeholder="Amount" id="amount"
+                    [formControlName]="formNames.Amount" type="number">
+                </div>
             </div>
-        </div>
-        <div class="col-sm-3">
-            <label>
-                From 
-            </label>
+            <div class="col-sm-3">
+                <label>
+                    From 
+                </label>
+                    <select
+                    class="custom-select mb-3"
+                    [formControlName]="formNames.FromCurrency"
+                    [(ngModel)]="fromDropdownName"
+                    (ngModelChange)="conversionTypechange()"
+                    >
+                    <option *ngFor="let conversion of conversions"
+                    [ngValue]="conversion.name">
+                        {{ conversion.name }}
+                    </option>
+                    </select>
+            </div>
+            <div class="col-sm-1">
+                <i class="fa fa-exchange fa-2x" aria-hidden="true" (click)="swapCurrencies()"></i>
+            </div>
+            <div class="col-sm-3">
+                <label>
+                    To
+                </label>
                 <select
                 class="custom-select mb-3"
-                [formControlName]="formNames.FromCurrency"
-                [(ngModel)]="fromDropdownName"
+                [formControlName]="formNames.ToCurrency"
+                [(ngModel)]="toDropdownName"
                 (ngModelChange)="conversionTypechange()"
                 >
-                <option *ngFor="let conversion of conversions"
-                 [ngValue]="conversion.name">
+                <option *ngFor="let conversion of conversions" [ngValue]="conversion.name">
                     {{ conversion.name }}
                 </option>
                 </select>
+            </div>
         </div>
-        <div class="col-sm-1">
-            <i class="fa fa-exchange fa-2x" aria-hidden="true" (click)="swapCurrencies()"></i>
-        </div>
-        <div class="col-sm-3">
-            <label>
-                To
-            </label>
-            <select
-            class="custom-select mb-3"
-            [formControlName]="formNames.ToCurrency"
-            [(ngModel)]="toDropdownName"
-            (ngModelChange)="conversionTypechange()"
-            >
-            <option *ngFor="let conversion of conversions" [ngValue]="conversion.name">
-                {{ conversion.name }}
-            </option>
-            </select>
+    </form>
+    <div class="row convert-button-container">
+        <div class="col-sm-8 align-self-end">
+            <button type="submit" class="btn btn-primary" (click)="convertCurrency()" [disabled]="currencyConverterForm.invalid || !showMoreDetails">Convert</button>
         </div>
     </div>
-</form>
-<div class="row convert-button-container">
-    <div class="col-sm-8 align-self-end">
-        <button type="submit" class="btn btn-primary" (click)="convertCurrency()" [disabled]="currencyConverterForm.invalid || !showMoreDetails">Convert</button>
-    </div>
-</div>
-<div class="row results-container">
-    <div class="col-sm-4">
-        <div class="card card-container">
-            <div class="card-body padding-top" *ngIf="toCurrencyRate > 0">1 {{fromDropdownName}} = {{toCurrencyRate}} {{toDropdownName}}</div>
+    <div class="row results-container">
+        <div class="col-sm-4">
+            <div class="card card-container">
+                <div class="card-body padding-top" *ngIf="toCurrencyRate > 0">1 {{fromDropdownName}} = {{toCurrencyRate}} {{toDropdownName}}</div>
+            </div>
         </div>
-    </div>
-    <div [ngClass]="showMoreDetails ? 'col-sm-5': 'col-sm-7'">
-        <div class="card">
-            <div class="card-body">{{result}} {{toDropdownName}}</div>
+        <div [ngClass]="showMoreDetails ? 'col-sm-5': 'col-sm-7'">
+            <div class="card">
+                <div class="card-body">{{result}} {{toDropdownName}}</div>
+            </div>
         </div>
-    </div>
-    <div class="col-sm-3" *ngIf="showMoreDetails">
-        <button type="submit" class="btn btn-primary" (click)="navigateToCurrencyDetails()"
-        [disabled]="currencyConverterForm.invalid">More Details</button>
+        <div class="col-sm-3" *ngIf="showMoreDetails">
+            <button type="submit" class="btn btn-primary" (click)="navigateToCurrencyDetails()"
+            [disabled]="currencyConverterForm.invalid">More Details</button>
+        </div>
     </div>
 </div>
