--- a/src/app/shared/components/currency-converter-form/currency-converter-form.component.html
+++ b/src/app/shared/components/currency-converter-form/currency-converter-form.component.html
@@ -21,6 +21,7 @@
                     [formControlName]="formNames.FromCurrency"
                     [(ngModel)]="fromDropdownName"
                     (ngModelChange)="conversionTypechange()"
+                    [attr.disabled]="!showMoreDetails ? '': null"
                     >
                     <option *ngFor="let conversion of conversions"
                     [ngValue]="conversion.name">
@@ -50,7 +51,7 @@
     </form>
     <div class="row convert-button-container">
         <div class="col-sm-8 align-self-end">
-            <button type="submit" class="btn btn-primary" (click)="convertCurrency()" [disabled]="currencyConverterForm.invalid || !showMoreDetails">Convert</button>
+            <button type="submit" class="btn btn-primary" (click)="convertCurrency()" [disabled]="currencyConverterForm.invalid || !disabledConvertButton">Convert</button>
         </div>
     </div>
     <div class="row results-container">
